# Veillend

./: .gitignore  Cargo.toml  PR_DOCUMENTATION.md  README.md  package.json  server.js  test.js
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-contribution.yml  backend.yml  backend_bug_report.yml  backend_contribution.yml  backend_issue.yml  backend_task.yml  bug_report.md  feature_request.md
.github/workflows/: mobile-ci.yml  soroban-ci.yml  veilend-backend.yml
legacy/: README.md
legacy/veilend-backend/: .env.example  README.md  package-lock.json  package.json  supabase_schema.sql
src/: app.js  validation.js
veilend-backend/: .dockerignore  .env.example  Dockerfile  INDEXER.md  README.md  SESSION.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
veilend-backend/prisma/: schema.prisma
veilend-backend/scripts/: seed-local-data.ts  seed-local-stellar-data.mjs  validate-contract-spec.ts
veilend-backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
veilend-backend/test/: session.e2e-spec.ts
veilend-mobile/: .env  .env.example  App.tsx  README.md  app.config.ts  app.json  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json
veilend-mobile/docs/: error-reporting.md
veilend-soroban/: .env.testnet.example  Cargo.toml  README.md
veilend-soroban/scripts/: build-contract.sh  build.sh  deploy-testnet.sh  deploy.sh  invoke.sh  (+3 more)
veilend-web/: CONTRIBUTING.md  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
(+235 files in other folders)
